Clean up share-coordinator